# ChemBot

./: .env  404.html  README.md  demo.py  index.html  mkdocs.yml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: deploy_docs.yml  deploy_pages.yml
chembot/: __init__.py  configuration.py  equipment.py  errors.py
chembot/Temp_measuring/: PID.py  Temp_PID_Heating.py  Thermocouple_class.py
chembot/communication/: __init__.py  base.py  communication.py  mock.py  pico_comm.py  serial_.py  serial_pico.py
chembot/controller/: __init__.py  controller.py  main_controller.py  manual.py  mater_controller.py
chembot/controllers/: controller.py
chembot/core/: equipment.py
chembot/core_equip/: communication.py  equip.py  pump.py  sensor.py
chembot/data/: syringe_data.json
chembot/equipment/: README.md  __init__.py  continuous_event_handler.py  equipment.py  equipment_interface.py  profile.py
chembot/fraction_collector/: Timer_test_pi.py
chembot/gui/: 1_custom.css  README.md  app.py  gui_actions.py  gui_core.py  gui_data.py  gui_data_actions.py  gui_rabbitmq.py  main.py
chembot/master_controller/: __init__.py  master_controller.py  registry.py
chembot/pump/: __init__.py  base.py  flow_profile.py  harvard_pumps.py
chembot/pumps/: __init__.py  base.py  syringes.py
chembot/rabbitmq/: README.md  REST_rabbit.py  _development.py  core.py  listener.py  message.py  messages.py  rabbit_core.py  rabbit_http.py  rabbit_http_messages.py  rabbitmq_core.py  watchdog.py
chembot/reference_data/: pico_pins.py  syringe_configs.py  valve_configs.py
chembot/scheduler/: __init__.py  base.py  event.py  gantt_chart.py  job.py  job_submitter.py  resource.py  schedular.py  schedule.py  submit_result.py  tree_to_gantt.py  triggers.py  validate.py
chembot/sub_equip/: README.md
chembot/tabs/: main.py  (+1 more)
develop/: README.md  harvardpump.py  kafka_2.py  kafka_example.py  pump.py  rabbit.py  rabbit2.py  rabbitmq.py  rabbitmq2.py
docs/: README.md  demo.py  test2.md
example/: main.py  schedualer_example.py
main_code/: __init__.py  con_fig.py  main.py  test.py
main_code_base/: README.md
pico_code/: PICO_general_comm.py  README.md  h.py  h2.py
search/: search_index.json
test/: index.html
test2/: index.html
tests/: equipment_interface.py  filtering_algorithms.py  gui.py  numpy_doc_string_parser.py  rabbit_http.py  ring_buffer.py  schedule_validation.py
(+346 files in other folders)
