[metadata]
name = chembot
version = 0.0.2
description = ChemBot: Tools for automating chemistry.
long_description = file: README.md
long_description_content_type = text/markdown
author = Dylan Walsh
url = https://github.com/dylanwal/ChemBot
license = BSD
license_file = LICENSE.txt
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    unit_parse
python_requires = >=3.9
package_dir =
    =src
zip_safe = no
include_package_data = true
install_requires =
    pint>=0.19
